--- a/style.css
+++ b/style.css
@@ -232,3 +232,29 @@ button {
 #centered-text {
   font-size: 25px;
 }
+
+.image1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 350px;
+  height: 300px;
+}
+
+.image-container {
+  text-align: center; 
+}
+
+.image-button {
+  display: block; 
+  margin-top: 10px; 
+  padding: 5px 10px; 
+  width: 150px;
+  background-color: #6b34a3; 
+  color: white; 
+  border: none; 
+  border-radius: 5px; 
+  text-decoration: none;
+  cursor: pointer; 
+  margin: 0 auto;
+}
