--- a/style.css
+++ b/style.css
@@ -258,3 +258,9 @@ button {
   cursor: pointer; 
   margin: 0 auto;
 }
+
+.image-container3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
